fix: turn on the tracking of intermediate and logs dirs

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,7 @@
 .*
 ~*
 
-# ignore intermediate, logs and scratch dirs
-intermediate
-logs
+# ignore `scratch` dirs
 scratch
 
 # ignore OS generated files
